# LogDeck

./: .gitignore  LICENSE  Log.cpp  Log.h  LogDeck.h  Makefile  README.md  Roadmap  configure.ac  main.cpp
src/: Log.h  Makefile.am
